Fix ClassCastException when viewing metric metadata. [HHQ-1180]